<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CrearCuentaComplementoActivity">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="347dp"
            android:layout_height="90dp"
            android:text="@string/str_titulo_complemento_crear_cuenta"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.564"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.034" />

        <TextView
            android:id="@+id/tvCorreoCrearCuentaComplemento"
            android:layout_width="347dp"
            android:layout_height="40dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView13"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <EditText
            android:id="@+id/etNombreCrearCuentaComplemento"
            android:layout_width="325dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="@string/str_campo_nombre_registro"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.416"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.212" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_tv_nombre_registro"
            android:textColor="#040404"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintVertical_bias="0.072" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/str_tv_apellidoPaterno_registro"
            android:textColor="#000000"

            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/etNombreCrearCuentaComplemento"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etNombreCrearCuentaComplemento"
            app:layout_constraintTop_toBottomOf="@+id/etNombreCrearCuentaComplemento" />

        <EditText
            android:id="@+id/etApellidoPaternoCrearCuentaComplemento"
            android:layout_width="325dp"
            android:layout_height="49dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/str_campo_apellidoPaterno_registro"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/str_tv_apellidoMaterno_registro"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/etApellidoPaternoCrearCuentaComplemento"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etApellidoPaternoCrearCuentaComplemento"
            app:layout_constraintTop_toBottomOf="@+id/etApellidoPaternoCrearCuentaComplemento" />

        <EditText
            android:id="@+id/etApellidoMaternoCrearCuentaComplemento"
            android:layout_width="325dp"
            android:layout_height="49dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/str_campo_apellidoMaterno_registro"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/str_tv_telefono_registro"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/etApellidoMaternoCrearCuentaComplemento"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etApellidoMaternoCrearCuentaComplemento"
            app:layout_constraintTop_toBottomOf="@+id/etApellidoMaternoCrearCuentaComplemento" />

        <EditText
            android:id="@+id/etTelefonoCrearCuentaComplemento"
            android:layout_width="200dp"
            android:layout_height="49dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/str_campo_telefono_registro"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/textView16"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/str_tv_direccion_registro"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/etTelefonoCrearCuentaComplemento"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etTelefonoCrearCuentaComplemento"
            app:layout_constraintTop_toBottomOf="@+id/etTelefonoCrearCuentaComplemento" />

        <EditText
            android:id="@+id/etDireccionCrearCuentaComplemento"
            android:layout_width="325dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="@string/str_campo_nombre_registro"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/textView15"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/str_tv_fechaNacimiento_registro"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/etDireccionCrearCuentaComplemento"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintStart_toStartOf="@+id/etDireccionCrearCuentaComplemento"
            app:layout_constraintTop_toBottomOf="@+id/etDireccionCrearCuentaComplemento" />

        <DatePicker
            android:id="@+id/dpFechaNacimientoCrearCuentaComplemento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="@+id/textView14"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <Button
            android:id="@+id/btnCrearCuentaUsuarioComplemento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/str_btn_registro_crearcuenta"
            android:textSize="16sp"
            app:flow_horizontalAlign="center"
            app:layout_constraintEnd_toEndOf="@+id/dpFechaNacimientoCrearCuentaComplemento"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toEndOf="@+id/dpFechaNacimientoCrearCuentaComplemento"
            app:layout_constraintStart_toStartOf="@+id/dpFechaNacimientoCrearCuentaComplemento"
            app:layout_constraintTop_toBottomOf="@+id/dpFechaNacimientoCrearCuentaComplemento" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
